--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Home page</title>
+		<title>Home page - Changes made to the home page title</title>
 	</head>
 	<body>
 		<nav> </nav>
