--- a/web/index.html
+++ b/web/index.html
@@ -7,7 +7,7 @@
 	<body>
 		<nav> </nav>
 		<header> </header>
-		<main> </main>
+		<main><p>This is the first paragraph for the site </p></main>
 		<footer> </footer>
 	</body>
 </html>
